<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="30dp"
    android:layout_marginRight="10dp"
    android:gravity="center|top|fill_vertical"
    android:orientation="vertical"
    tools:context=".LocationsActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/amenity_title"
        android:textSize="@dimen/title_font_size"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/parking"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_background"
        android:drawableTop="@drawable/baseline_local_parking_24"
        android:paddingTop="16dp"
        android:text="@string/parking_text"
        android:textAllCaps="false"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/toilet"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:drawableTop="@drawable/baseline_family_restroom_24"
        android:paddingTop="16dp"
        android:text="@string/toilet_text"
        android:textAllCaps="false"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintEnd_toStartOf="@+id/attraction"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parking" />

    <Button
        android:id="@+id/attraction"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_background"
        android:drawableTop="@drawable/outline_photo_camera_24"
        android:paddingTop="16dp"
        android:text="@string/attraction_text"
        android:textAllCaps="false"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toTopOf="@+id/recycling"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/toilet"
        app:layout_constraintTop_toBottomOf="@+id/parking" />

    <Button
        android:id="@+id/recycling"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_background"
        android:drawableTop="@drawable/baseline_recycling_24"
        android:paddingTop="16dp"
        android:text="@string/recycling_text"
        android:textAllCaps="false"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toilet" />

    <Button
        android:id="@+id/water"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:drawableTop="@drawable/outline_water_drop_24"
        android:paddingTop="16dp"
        android:text="@string/water_text"
        android:textAllCaps="false"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintEnd_toStartOf="@+id/shopping"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycling" />

    <Button
        android:id="@+id/shopping"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_background"
        android:drawableTop="@drawable/outline_shopping_cart_24"
        android:paddingTop="16dp"
        android:text="@string/supermarket_text"
        android:textAllCaps="false"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/water"
        app:layout_constraintTop_toBottomOf="@+id/recycling" />

    <Button
        android:id="@+id/entertainment"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_background"
        android:drawableTop="@drawable/outline_music_note_24"
        android:paddingTop="16dp"
        android:text="@string/entertainment_text"
        android:textAllCaps="false"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopping" />
</androidx.constraintlayout.widget.ConstraintLayout>